--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -80,6 +80,9 @@ claimFullAdmissionForClaimantClaimDetails,
   CCJAfterBreakingSettlementAgreementClaimDetails,
   pastPaymentDeadlineDefendantClaimDetails %}
 
+{% from "./claimStatus/partAdmissionStatesPaidAccepted.njk" import partAdmissionStatesPaidClaimSettledClaimantDetails,
+partAdmissionStatesPaidClaimSettledDefendantsDetails %}
+
 {% macro caseHistoryForClaimantClaimDetails(claim, csrf) %}
   {% for state in claim.stateHistory %}
     {% if state.status === ClaimStatus.PAID_IN_FULL_LINK_ELIGIBLE %}
@@ -155,6 +158,8 @@ claimFullAdmissionForClaimantClaimDetails,
       {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
       {{ settlementAgreementRejectedClaimantClaimDetails(claim, csrf) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_PART_ADMISSION_STATES_PAID %}
+      {{ partAdmissionStatesPaidClaimSettledClaimantDetails(claim, csrf) }}
     {% endif %}
   {% endfor %}
 {% endmacro %}
@@ -230,6 +235,8 @@ claimFullAdmissionForClaimantClaimDetails,
         {{ settlementAgreementRejectedDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.PART_ADMIT_PAY_IMMEDIATELY %}
         {{ partAdmittedAcceptedPayImmediatelyDefendantClaimDetails(claim) }}
+      {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_PART_ADMISSION_STATES_PAID %}
+        {{ partAdmissionStatesPaidClaimSettledDefendantsDetails(claim, csrf) }}
       {% endif %}
   {% endfor %}
 {% endmacro %}
