bug/ROC-5084: Further improvements

--- a/src/main/features/dashboard/views/macro/claimStatus/paidInFullDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/paidInFullDefendant.njk
@@ -1,7 +1,7 @@
 {% from "./utilityMacros.njk" import downloadResponseLink %}
 {% from "internalLink.njk" import internalLink %}
 
-{% macro paidInFullDefendantDashboard() %}
+{% macro claimSettledDashboard() %}
   {{ t('This claim is settled.') }}
 {% endmacro %}
 
