Update 'defendants-response' screen to show the stated paid amount, if present, otherwise use the full claim amount

--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -68,7 +68,12 @@
             {{ evidenceFragment(claim.response.evidence) }}
           {% endif %}
         {% else %}
-          {{ t('{{ defendantName }} states they paid you {{ amount }}.', { defendantName: defendantName, amount: claim.totalAmountTillToday | numeral }) }}
+          {{ t('{{ defendantName }} states they paid you {{ amount }}.',
+            {
+              defendantName: defendantName,
+              amount: (claim.response.paymentDeclaration.paidAmount if claim.response.paymentDeclaration.paidAmount else claim.totalAmountTillToday) | numeral
+            }
+          ) }}
 
           {{ paymentInformationFragment(paymentDeclaration = claim.response.paymentDeclaration) }}
 
