--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -54,7 +54,7 @@
   settlementAgreementRejectedForClaimantDashboard %}
 
 {% from "./claimStatus/paidInFullClaimant.njk" import paidInFullClaimantDashboard %}
-{% from "./claimStatus/paidInFullDefendant.njk" import paidInFullDefendantDashboard, paidInFullCancelledOrSatisfiedDefendantDashboard %}
+{% from "./claimStatus/paidInFullDefendant.njk" import claimSettledDashboard, paidInFullCancelledOrSatisfiedDefendantDashboard %}
 
 {% from "./claimStatus/offerSettlement.njk" import offerSettlementReachedDashboard %}
 
@@ -76,8 +76,9 @@
 
 
 {% macro caseStatusForClaimant(status, claim) %}
-  {% if status === ClaimStatus.PAID_IN_FULL or status === ClaimStatus.PAID_IN_FULL_CCJ_CANCELLED or status === ClaimStatus.PAID_IN_FULL_CCJ_SATISFIED %}
-    {{ paidInFullClaimantDashboard() }}
+  {% if status === ClaimStatus.PAID_IN_FULL or status === ClaimStatus.PAID_IN_FULL_CCJ_CANCELLED or status === ClaimStatus.PAID_IN_FULL_CCJ_SATISFIED
+    or status === ClaimStatus.CLAIMANT_ACCEPTED_PART_ADMISSION_STATES_PAID %}
+    {{ claimSettledDashboard() }}
   {% elif status === ClaimStatus.NO_RESPONSE %}
     {{ noResponseForClaimantDashboard() }}
   {% elif status === ClaimStatus.MORE_TIME_REQUESTED %}
@@ -142,8 +143,8 @@
 {% endmacro %}
 
 {% macro caseStatusForDefendant(status, claim) %}
-  {% if status === ClaimStatus.PAID_IN_FULL %}
-    {{ paidInFullDefendantDashboard() }}
+  {% if status === ClaimStatus.PAID_IN_FULL or status === ClaimStatus.CLAIMANT_ACCEPTED_PART_ADMISSION_STATES_PAID %}
+    {{ claimSettledDashboard() }}
   {% elif status === ClaimStatus.PAID_IN_FULL_CCJ_CANCELLED or status === ClaimStatus.PAID_IN_FULL_CCJ_SATISFIED %}
     {{ paidInFullCancelledOrSatisfiedDefendantDashboard(claim) }}
   {% elif status === ClaimStatus.NO_RESPONSE %}
