Two small mediation content changes
1. Remove the words 'they won't make you compromise' from 'How mediation works' screen
2. Change time from 9am to 8am on 'You can only use free mediation if' screen

--- a/src/main/features/mediation/views/how-mediation-works.njk
+++ b/src/main/features/mediation/views/how-mediation-works.njk
@@ -14,7 +14,7 @@
       <p>{{ t('The mediator will:') }}</p>
       <ul class="list list-bullet">
         <li>{{ t('listen to each side separately - you won’t talk directly to the other side') }}</li>
-        <li>{{ t('ask you to consider what the other side says - they won’t make you compromise') }}</li>
+        <li>{{ t('ask you to consider what the other side says') }}</li>
         <li>{{ t('help you reach an agreement, if possible') }}</li>
       </ul>
 
@@ -33,4 +33,3 @@
     </div>
   </div>
 {% endblock %}
-
