Minor content changes and update to use correct page flow

--- a/src/main/features/mediation/views/how-mediation-works.njk
+++ b/src/main/features/mediation/views/how-mediation-works.njk
@@ -19,7 +19,7 @@
       </ul>
 
       <h2 class="heading-medium">{{ t('After the phone call') }}</h2>
-      <p>{{ t('If mediation is successful we’ll ask you to sign a legal agreement that formalises what you agreed.') }}</p>
+      <p>{{ t('If mediation is successful you’ll make a verbal agreement over the phone. We’ll email the agreement to you. You won’t have to sign anything but the agreement is binding.') }}</p>
       <p>{{ t('If either party breaks the terms, the other party can apply to the court to enforce them.') }}</p>
       <p>{{ t('If mediation fails and a hearing is needed, any mediation discussions can’t be mentioned in court.') }}</p>
 
