--- a/src/main/features/mediation/views/mediation-agreement.njk
+++ b/src/main/features/mediation/views/mediation-agreement.njk
@@ -14,7 +14,7 @@
       <div class="form-group">
         <div class="notice">
           <i class="icon icon-important"><span class="visually-hidden">{{ t('Warning') }}</span></i>
-          <strong>{{ t('You need to agree to all of these to use mediation.') }}</strong>
+          <strong class="bold-small">{{ t('You need to agree to all of these to use mediation.') }}</strong>
         </div>
       </div>
 
