--- a/src/main/features/dashboard/views/macro/claimStatus/redeterminationRequestedDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/redeterminationRequestedDefendant.njk
@@ -7,13 +7,13 @@
 {% macro redeterminationDefendantClaimDetails(claim) %}
   <div class="status-block">
     {% if claim.reDetermination.partyType === MadeBy.CLAIMANT
-      or claim.isInterlocutoryJudgmentRequestedOnFullAdmission() %}
+      or claim.isInterlocutoryJudgmentRequestedOnAdmissions() %}
       <h2 class="heading-small">{{ t('{{ claimantName }} requested a County Court Judgment (CCJ) against you',
           { claimantName: claim.claimData.claimant.name }) }}</h2>
       {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
         <p>{{ t('They rejected your repayment plan.') }}</p>
       {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
-        <p>{{ t('They accepted your offer to pay {{ partAdmitAmount }}. They rejected your repayment plan.', { partAdmitAmount: claim.response.amount }) }}</p>
+        <p>{{ t('They accepted your offer to pay {{ partAdmitAmount }}. They rejected your repayment plan.', { partAdmitAmount: claim.response.amount | numeral }) }}</p>
       {% endif %}
       <p>{{ t('They also rejected a repayment plan determined by the court, based on the financial details you provided.') }}</p>
       <p>{{ t('When we’ve processed the request we’ll post a copy of the judgment to you and to {{ claimantName }}.',
