Added one word ('free') to mediation button

--- a/src/main/features/mediation/views/free-mediation.njk
+++ b/src/main/features/mediation/views/free-mediation.njk
@@ -22,7 +22,7 @@
         {{ csrfProtection(csrf) }}
 
         <div class="form-group">
-          {{ submitButton('How mediation works') }}
+          {{ submitButton('How free mediation works') }}
         </div>
       </form>
 
@@ -30,4 +30,3 @@
     </div>
   </div>
 {% endblock %}
-
