--- a/src/main/views/macro/support.njk
+++ b/src/main/views/macro/support.njk
@@ -9,7 +9,9 @@
 {% endmacro %}
 
 {% macro mcolSupportWidget(label = 'Help and advice') %}
-  <h2 class="heading-medium">{{ t(label) }}</h2>
+  {% if label %}
+    <h2 class="heading-medium">{{ t(label) }}</h2>
+  {% endif %}
   <pre>{{ t('Money Claim Online helpdesk') }}</pre>
   <pre>{{ t('Email: ccbc@hmcts.gsi.gov.uk') }}</pre>
   <pre>{{ t('Telephone: 0300 123 1057') }}</pre>
@@ -23,3 +25,9 @@
   </p>
 {% endmacro %}
 
+{% macro citizensAdviceWidget() %}
+<p>
+  {{ t('You might be able to get advice about the claim from') }}
+  {{ externalLink(t('Citizens Advice'), 'https://www.citizensadvice.org.uk/about-us/contact-us/') }}.
+</p>
+{% endmacro %}
