--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -1,3 +1,5 @@
+{% from "internalLink.njk" import internalLink %}
+
 {% from "./caseStatus.njk" import caseStatusForClaimant, caseStatusForDefendant %}
 
 {% from "./claimStatus/noReponse.njk" import noResponseForClaimantClaimDetails, noResponseForDefendantClaimDetails %}
@@ -244,8 +246,8 @@ partAdmissionStatesPaidClaimSettledDefendantsDetails %}
 {% macro _settleOutOfCourtOption (claim) %}
   <div class="status-block">
     <h2 class="heading-medium">{{ t('Settle out of court') }}</h2>
-    <p>{{ t('You may still <a href="{{ link }}">settle the claim out of court</a>. For example you could offer to fix goods you sold the claimant or suggest a payment.',
-        { link: OfferPaths.settleOutOfCourtPage.evaluateUri({ externalId: claim.externalId }) }) | safe }}</p>
+    <p>{{ t('You may still {{ settleOutOfCourt }}. For example you could offer to fix goods you sold the claimant or suggest a payment.',
+        { settleOutOfCourt: internalLink(t('settle the claim out of court'), OfferPaths.settleOutOfCourtPage.evaluateUri({ externalId: claim.externalId })) }) | safe }}</p>
     <p>{{ t('You can avoid getting a County Court Judgment if the claimant accepts your offer.') }}</p>
   </div>
 {% endmacro %}
