--- a/src/main/features/claim/views/confirmation.njk
+++ b/src/main/features/claim/views/confirmation.njk
@@ -1,6 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import submitButton, errorSummary %}
 {% from "support.njk" import supportWidget %}
+{% from "internalLink.njk" import internalLink %}
 
 {% set headingVisible = false %}
 {% set heading = 'Confirmation' %}
@@ -18,9 +19,7 @@
           <h1 class="bold-large">{{ claim.claimNumber }}</h1>
         </div>
         <p class="receipt-download-container">
-          <a href="{{ ClaimPaths.receiptReceiver.evaluateUri({ externalId: claim.externalId}) }}">
-            {{ t('Download your claim form') }}
-          </a>
+          {{ internalLink(t('Download your claim form'), ClaimPaths.receiptReceiver.evaluateUri({ externalId: claim.externalId})) }}
         </p>
 
       </div>
@@ -41,7 +40,7 @@
 
       {% include "includes/service_survey_link.njk" %}
 
-      <a class="button" href="/dashboard" >{{ t('Go to your account') }}</a>
+      {{ internalLink(t('Go to your account'), Paths.dashboardPage.uri, 'button') }}
 
       {{ supportWidget() }}
 
