--- a/src/main/features/first-contact/views/access-denied.njk
+++ b/src/main/features/first-contact/views/access-denied.njk
@@ -1,4 +1,5 @@
 {% extends "layout.njk" %}
+{% from "internalLink.njk" import internalLink %}
 
 {% set heading = 'You are not authorised to view the claim!' %}
 
@@ -6,7 +7,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>{{ t('There was an error during your last operation. Please try again later.') }}</p>
-      <a href="/first-contact/claim-reference">{{ t('Click here to try again') }}</a>
+      {{ internalLink(t('Click here to try again'), '/first-contact/claim-reference') }}
     </div>
   </div>
 {% endblock %}
