--- a/src/main/features/offer/views/settled.njk
+++ b/src/main/features/offer/views/settled.njk
@@ -17,13 +17,13 @@
           <span class="bold">{{ claim.settlementReachedAt | date }}</span>
         </div>
         <div class="receipt-download-container">
-          <a
-            href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('Download settlement agreement') }}</a>{{ t(' (PDF)') }}
+          {{ internalLink(t('Download settlement agreement'), OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId })) }}
+          {{ t('(PDF)') }}
         </div>
       </div>
 
       <p>
-        {{ t('We’ll email {{ claimantName }} telling them that you have signed the settlement agreement.',{claimantName: claim.claimData.claimant.name}) }}
+        {{ t('We’ll email {{ claimantName }} telling them that you have signed the settlement agreement.', { claimantName: claim.claimData.claimant.name }) }}
       </p>
 
       <p>
@@ -44,7 +44,7 @@
       {% include "includes/service_survey_link.njk" %}
 
       <p>
-        <a href="{{ DashboardPaths.dashboardPage.uri }}" class="button">{{ t('Go to your account') }}</a>
+        {{ internalLink(t('Go to your account'), DashboardPaths.dashboardPage.uri, 'button') }}
       </p>
 
       {{ supportWidget() }}
