--- a/src/main/views/macro/internalLink.njk
+++ b/src/main/views/macro/internalLink.njk
@@ -1,3 +1,3 @@
 {% macro internalLink(text, href, class='', id='', dataEventLabel='') %}
-  <a href="{{ href }}" class="{{ class }}"{{ ' ' + id if id else '' }}{{ ' ' + dataEventLabel if dataEventLabel else '' }}>{{ text }}</a>
+  <a href="{{ href }}" class="{{ class }}"{{ ' id="' + id + '"' if id else '' }}{{ ' dataEventLabel="' + dataEventLabel + '"' if dataEventLabel else '' }}>{{ text }}</a>
 {% endmacro %}
