--- a/src/main/features/claim/views/confirmation.njk
+++ b/src/main/features/claim/views/confirmation.njk
@@ -40,7 +40,7 @@
 
       {% include "includes/service_survey_link.njk" %}
 
-      {{ internalLink(t('Go to your account'), Paths.dashboardPage.uri, 'button') }}
+      {{ internalLink(t('Go to your account'), DashboardPaths.dashboardPage.uri, 'button') }}
 
       {{ supportWidget() }}
 
