--- a/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
@@ -2,8 +2,8 @@
 {% from "internalLink.njk" import internalLink %}
 {% from "./utilityMacros.njk" import downloadResponseLink %}
 
-{% macro partAdmitRejectedByClaimantDashboard(claim) %}
-  {{ t('You’ve rejected the defendant’s admission. They said they owe {{ amount }}', { amount: claim.response.amount | numeral }) }}
+{% macro partAdmitRejectedByClaimantDashboard() %}
+  {{ t('You’ve rejected the defendant’s admission.') }}
 {% endmacro %}
 
 {% macro partAdmitRejectedByClaimantClaimDetails(claim) %}
