Replace hard-coded URIs with Path members

--- a/src/main/features/first-contact/views/access-denied.njk
+++ b/src/main/features/first-contact/views/access-denied.njk
@@ -7,7 +7,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <p>{{ t('There was an error during your last operation. Please try again later.') }}</p>
-      {{ internalLink(t('Click here to try again'), '/first-contact/claim-reference') }}
+      {{ internalLink(t('Click here to try again'), FirstContactPaths.claimReferencePage.uri) }}
     </div>
   </div>
 {% endblock %}
