--- a/src/main/views/includes/support-links.njk
+++ b/src/main/views/includes/support-links.njk
@@ -18,7 +18,7 @@
     </li>
   {% if featureToggles.testingSupport %}
     <li>
-      {{ internalLink(t('Testing support'), '/testing-support') }}
+      {{ internalLink(t('Testing support'), TestingSupportPaths.indexPage.uri) }}
     </li>
   {% endif %}
 </ul>
