ROC-5258 Refactor claim issued dashboard status
 - The dashboard status will be decided according to the state of a claim (as it is now), but
   will be calculated using a 'flowchart'-like data structure instead of complex if-elses.
   This should make everything more testable and also it should be easier to follow what's going
   on.
 - Each element of this flowchart has a `description` (for documentation purposes), an optional
   `dashboard` (the string name of the `njk` template containing the status), a `condition` (a
   function which is true when the claim is in that status) and `next states.
   Basically, the code will go through the flowchart, given a certain claim. It will evaluate the condition
   of each state, and if it's a leaf (there are no next states, or all of next states are `false`) then it will
   return the dashboard, otherwise it will go to the next valid state and so on.
 - Only one of the flowchart paths should be valid at any given time - if there are two possible paths, it means
   that either the conditions in the flowcharts are wrong, or the claim is in a weird state
 - Each dashboard status should go to a separate nunjucks template. This will make things easier
   to reason about as the logic is 100% in typescript, rather than in two places. To not take this to
   the extreme, tho, there shouldn't be a problem having super simple conditions in nunjucks - when the
   logic becomes too cumbersome, it should definitely be moved in the "rule engine"

--- a/src/main/features/dashboard/views/index.njk
+++ b/src/main/features/dashboard/views/index.njk
@@ -6,6 +6,16 @@
 
 {% set heading = 'Your money claims account' %}
 
+{% macro backwardCompatibleDashboardFor(claim, newStatus, type) %}
+  {% if newStatus %}
+    {{ newStatus }}
+  {% elif type === 'claimant' %}
+    {{ caseStatusForClaimant(claim.status, claim) }}
+  {% else %}
+    {{ caseStatusForDefendant(claim.status, claim) }}
+  {% endif %}
+{% endmacro %}
+
 {% block content %}
   <div class="grid-row">
     <div class="column-full">
@@ -44,18 +54,19 @@
           </tr>
         {% endif %}
         {% for claim in claimsAsClaimant %}
+          {% set claimantDashboardStatus = claim | dashboardStatusForClaimant %}
           <tr class="claims default mobile-table">
             <td>{{ internalLink(claim.claimNumber, '/dashboard/' + claim.externalId + '/claimant') }}</td>
             <td>{{ claim.claimData.defendant.name }}</td>
             <td>{{ claim.totalAmountTillToday | numeral }}</td>
             <td class="mobile-hide">
-              {{ caseStatusForClaimant(claim.status, claim) }}
+              {{ backwardCompatibleDashboardFor(claim, claimantDashboardStatus, 'claimant') }}
             </td>
           </tr>
           <tr>
             <td colspan="3" class="mobile-table-status">
-              {{ t('Status: ') }}
-              {{ caseStatusForClaimant(claim.status, claim) }}
+              {{ t('Status:') }}
+              {{ backwardCompatibleDashboardFor(claim, claimantDashboardStatus, 'claimant') }}
             </td>
           </tr>
         {% endfor %}
@@ -89,17 +100,19 @@
           </tr>
         {% endif %}
         {% for claim in claimsAsDefendant %}
+          {% set defendantDashboardStatus = claim | dashboardStatusForDefendant %}
           <tr class="mobile-table">
             <td>{{ internalLink(claim.claimNumber, DashboardPaths.defendantPage.evaluateUri({ externalId: claim.externalId })) }}</td>
             <td>{{ claim.claimData.claimant.name }}</td>
             <td>{{ claim.totalAmountTillToday | numeral }}</td>
             <td class="mobile-hide">
-              {{ caseStatusForDefendant(claim.status, claim) }}
+              {{ backwardCompatibleDashboardFor(claim, defendantDashboardStatus, 'defendant') }}
             </td>
           </tr>
           <tr>
             <td colspan="3" class="mobile-table-status">
-              {{ t('Status:') }} {{ caseStatusForDefendant(claim.status, claim) }}
+              {{ t('Status:') }}
+              {{ backwardCompatibleDashboardFor(claim, defendantDashboardStatus, 'defendant') }}
             </td>
           </tr>
         {% endfor %}
