--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -1,14 +1,20 @@
-{% from "./caseStatus.njk" import caseStatusForClaimant, caseStatusForDefendant %}
+{% from "./caseStatus.njk" import
+  caseStatusForClaimant,
+  caseStatusForDefendant %}
 
-{% from "./claimStatus/noReponse.njk" import noResponseForClaimantClaimDetails, noResponseForDefendantClaimDetails %}
-{% from "./claimStatus/moreTimeRequested.njk" import moreTimeRequestedForClaimantClaimDetails, moreTimeRequestedForDefendantClaimDetails %}
+{% from "./claimStatus/noReponse.njk" import
+  noResponseForClaimantClaimDetails,
+  noResponseForDefendantClaimDetails %}
+{% from "./claimStatus/moreTimeRequested.njk" import
+  moreTimeRequestedForClaimantClaimDetails,
+  moreTimeRequestedForDefendantClaimDetails %}
 
 {% from "./claimStatus/ccjEligible.njk" import
   ccjEligibleForClaimantClaimDetails,
   ccjEligibleForDefendantClaimDetails %}
 {% from "./claimStatus/ccjRequested.njk" import
-ccjRequestedForClaimantClaimDetails,
-ccjRequestedForDefendantClaimDetails %}
+  ccjRequestedForClaimantClaimDetails,
+  ccjRequestedForDefendantClaimDetails %}
 
 {% from "./claimStatus/claimRejected.njk" import
   claimRejectedAlreadyPaidForClaimantClaimDetails,
@@ -39,7 +45,7 @@ ccjRequestedForDefendantClaimDetails %}
   claimFullAdmissionForDefendantClaimDetails %}
 
 {% from "./claimStatus/claimFullAdmissionForClaimant.njk" import
-claimFullAdmissionForClaimantClaimDetails,
+  claimFullAdmissionForClaimantClaimDetails,
   claimFullAdmissionPayImmediatelyPastDeadlineForClaimantClaimDetails %}
 
 {% from "./claimStatus/offerSubmitted.njk" import
@@ -58,8 +64,17 @@ claimFullAdmissionForClaimantClaimDetails,
 {% from "./claimStatus/claimantResponse.njk" import
   claimantWithDefendantAsBusinessResponseDetailedStatus %}
 
-{% from "./claimStatus/paidInFullClaimant.njk" import paidInFullClaimantClaimSettledDetails, paidInFullClaimantClaimDetails, paidInFullCCJCancelledClaimantClaimDetails, paidInFullCCJSatisfiedClaimantClaimDetails %}
-{% from "./claimStatus/paidInFullDefendant.njk" import paidInFullDefendantClaimDetails, paidInFullCCJSatisfiedDefendantClaimDetails, paidInFullCCJCancelledDefendantClaimDetails %}
+{% from "./claimStatus/paidInFullClaimant.njk" import
+  paidInFullClaimantClaimSettledDetails,
+  paidInFullClaimantClaimDetails,
+  paidInFullRejectedClaimantClaimDetails,
+  paidInFullCCJCancelledClaimantClaimDetails,
+  paidInFullCCJSatisfiedClaimantClaimDetails %}
+{% from "./claimStatus/paidInFullDefendant.njk" import
+  paidInFullDefendantClaimDetails,
+  paidInFullRejectedDefendantClaimDetails,
+  paidInFullCCJSatisfiedDefendantClaimDetails,
+  paidInFullCCJCancelledDefendantClaimDetails %}
 {% from "./claimStatus/admissionByCCJClaimant.njk" import admissionByCCJClaimantClaimDetails %}
 {% from "./claimStatus/admissionByCCJDefendant.njk" import
   admissionByCCJDefendantClaimDetails,
@@ -155,12 +170,14 @@ claimFullAdmissionForClaimantClaimDetails,
       {{ claimantWithDefendantAsBusinessResponseDetailedStatus(claim) }}
     {% elif state.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
       {{ requestCCJ(claim) }}
-    {% elif state.status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
+    {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
       {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
       {{ settlementAgreementRejectedClaimantClaimDetails(claim, csrf) }}
     {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_STATES_PAID %}
       {{ statesPaidClaimSettledClaimantDetails(claim, csrf) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PAID_IN_FULL %}
+      {{ paidInFullRejectedClaimantClaimDetails(claim) }}
     {% endif %}
   {% endfor %}
 {% endmacro %}
@@ -224,7 +241,7 @@ claimFullAdmissionForClaimantClaimDetails,
         {{ offerAcceptedForDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.OFFER_SETTLEMENT_REACHED %}
         {{ offerSettlementReachedForDefendant(claim) }}
-      {% elif state.status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
+      {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
         {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_BUSINESS_RESPONSE %}
         {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
@@ -238,6 +255,8 @@ claimFullAdmissionForClaimantClaimDetails,
         {{ partAdmittedAcceptedPayImmediatelyDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_STATES_PAID %}
         {{ statesPaidClaimSettledDefendantsDetails(claim, csrf) }}
+      {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PAID_IN_FULL %}
+        {{ paidInFullRejectedDefendantClaimDetails(claim) }}
       {% endif %}
   {% endfor %}
 {% endmacro %}
