--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -53,8 +53,13 @@
   settlementAgreementSignedByBothClaimantDashboard,
   settlementAgreementRejectedForClaimantDashboard %}
 
-{% from "./claimStatus/paidInFullClaimant.njk" import paidInFullClaimantDashboard %}
-{% from "./claimStatus/paidInFullDefendant.njk" import claimSettledDashboard, paidInFullCancelledOrSatisfiedDefendantDashboard %}
+{% from "./claimStatus/paidInFullClaimant.njk" import
+  paidInFullAcceptedClaimantDashboard,
+  paidInFullRejectedClaimantDashboard %}
+{% from "./claimStatus/paidInFullDefendant.njk" import
+  claimSettledDashboard,
+  paidInFullCancelledOrSatisfiedDefendantDashboard,
+  paidInFullRejectedDefendantDashboard %}
 
 {% from "./claimStatus/offerSettlement.njk" import offerSettlementReachedDashboard %}
 
@@ -129,10 +134,10 @@
     {{ offerSettlementReachedDashboard() }}
   {% elif status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_BUSINESS_RESPONSE %}
     {{ partAdmitRejectedByClaimantDashboard(claim) }}
-  {% elif status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
+  {% elif status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
     {{ partAdmitRejectedByClaimantDashboard(claim) }}
-  {% elif status === ClaimStatus.CLAIMANT_REJECTS_FULL_DEFENCE_OVERPAID %}
-    {{ fullDefenceOverpaidRejectedForClaimantDashboard(claim) }}
+  {% elif status === ClaimStatus.CLAIMANT_REJECTED_PAID_IN_FULL %}
+    {{ paidInFullRejectedClaimantDashboard(claim) }}
   {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
     {{ claimantWithDefendantAsBusinessResponse() }}
   {% elif status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_PART_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
@@ -193,11 +198,11 @@
     {{ offerRejectedForDefendantDashboard() }}
   {% elif status === ClaimStatus.OFFER_ACCEPTED %}
     {{ offerAcceptedForDefendantDashboard() }}
-  {% elif status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION
+  {% elif status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION
     or status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_BUSINESS_RESPONSE %}
     {{ partAdmitRejectedByClaimantDefendantDashboard(claim) }}
-  {% elif status === ClaimStatus.CLAIMANT_REJECTS_FULL_DEFENCE_OVERPAID %}
-    {{ fullDefenceOverpaidRejectedForDefendantDashboard(claim) }}
+  {% elif status === ClaimStatus.CLAIMANT_REJECTED_PAID_IN_FULL %}
+    {{ paidInFullRejectedDefendantDashboard(claim) }}
   {% elif status === ClaimStatus.PART_ADMIT_PAY_IMMEDIATELY %}
     {{ partAdmittedClaimantAcceptsDefendantDashboard(claim) }}
   {% elif status === ClaimStatus.OFFER_SETTLEMENT_REACHED
