feature enabling and task list builder changes

--- a/src/main/features/claimant-response/views/task-list.njk
+++ b/src/main/features/claimant-response/views/task-list.njk
@@ -23,6 +23,16 @@
         {% endfor %}
       </div>
 
+      {% if directionsQuestionnaireSection %}
+        <div class="task-group">
+          {{ taskListHeading(directionsQuestionnaireSection.name) }}
+
+          {% for item in directionsQuestionnaireSection.tasks %}
+            {{ task(item.startPageUrl, t(item.name), item.completed, true) }}
+          {% endfor %}
+        </div>
+      {% endif %}
+
       {% if submitSection %}
         <div class="task-group">
           {{ taskListHeading(submitSection.name) }}
