--- a/src/main/views/macro/support.njk
+++ b/src/main/views/macro/support.njk
@@ -23,3 +23,9 @@
   </p>
 {% endmacro %}
 
+{% macro citizensAdviceWidget() %}
+<p>
+  {{ t('You might be able to get advice about the claim from') }}
+  {{ externalLink(t('Citizens Advice'), 'https://www.citizensadvice.org.uk/about-us/contact-us/') }}.
+</p>
+{% endmacro %}
