removed defenddant owes you X line and replaced it with content from prototype

--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
@@ -23,8 +23,7 @@
 {% endmacro %}
 
 {% macro claimPartAdmittedToOweForClaimantDashboard(claim) %}
-  {{ t('The defendant believes they owe you {{ amount }}. You can accept or reject that this is the amount owed.',
-    { amount: claim.response.amount | numeral }) }}
+  {{ t('Respond to the defendant.') }}
 {% endmacro %}
 
 
