added a small amount of logic for part admit/not paid

--- a/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimPartAdmissionClaimant.njk
@@ -23,7 +23,13 @@
 {% endmacro %}
 
 {% macro claimPartAdmittedToOweForClaimantDashboard(claim) %}
+
+  {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+    {{ t('Waiting for the defendant to pay you') }}
+  {% else %}
   {{ t('Respond to the defendant.') }}
+  {% endif %}
+
 {% endmacro %}
 
 
